--- a/styles/stylep5.css
+++ b/styles/stylep5.css
@@ -4,11 +4,12 @@ body{
     height: 100vh;
     width:100vw;
     margin:0;
+    overflow: hidden;
 }
 
 .grid{
     display: grid;
-    grid-template-columns: 5vw 25vw auto;
+    grid-template-columns: 0px 5vw  25vw auto;
     grid-auto-rows: 100vh;
 }
 
@@ -25,6 +26,18 @@ h1{
     text-underline-offset: .1em;
     text-decoration-color: rgb(63, 63, 63);
     font-weight: 100;
+    text-align: center;
+}
+.barre{
+    background: #fff;
+    width:0vw;
+    z-index:1;
+    transition: all .5s ease-out;
+}
+
+.dev{
+    width:25vw;
+    box-shadow: 0px 0px 100em 30vw rgba(0, 0, 0, 0.397);
 }
 
 .container{
@@ -34,6 +47,7 @@ h1{
 
 .images{
     width:70%;
+    margin-left:10%;
 }
 
 .pc{
@@ -78,19 +92,20 @@ h1{
 }
 
 #busd{
-    position:relative;
-    left:2em;
-    top:2em;
+    position:absolute;
+    left:1.7em;
+    top:5em;
     width:4em;
     height:4em;
     border-radius:2em;
     border:none;
-    box-shadow: 0 0 5px 2px rgb(109, 109, 109);
     background-color: #fff ;
+    z-index:2;
+    box-shadow: 0 0 5px 2px rgb(109, 109, 109);
 }
 #s1,#s2,#s3{
     margin-left:7%;
-    height:7%;
+    height:5%;
     background-color: #000;
     border-radius: .2em;
     width:85%;
@@ -102,4 +117,27 @@ h1{
 
 #s2{
     width:65%;
+}
+
+
+button + a,a+a{
+    margin-top:10vh;
+}
+
+#recharger{
+    position:absolute;
+    left:1.4em;
+    top:5em;
+    width:3.38em;
+    height:3.38em;
+    border-radius:2em;
+    border:none;
+    background-color: #fff ;
+    z-index:2;
+    box-shadow: 0 0 5px 2px rgb(109, 109, 109);
+}
+
+.logo96px{
+    width:80%;
+    margin:10% 0 0 8%;
 }
