--- a/styles/stylep5.css
+++ b/styles/stylep5.css
@@ -61,8 +61,8 @@ h1{
 }
 
 .images{
-    width:25em;
-    height: 17.85em;
+    width:15em;
+    height: 15em;
     cursor: pointer;
 }
 .composants{
@@ -72,10 +72,17 @@ h1{
     flex-direction: column;
 }
 
-.d1{
+#d1{
     background-image: url('../images/mb.png');
-    background-size: cover;   
+    background-size: contain;
+    background-repeat: no-repeat;
 }
+.cm1{
+    position:absolute;
+    bottom:15vh;
+    
+}
+
 #d2{
     background-image: url('../images/cpu.png');
     background-size: cover;   
@@ -86,11 +93,13 @@ h1{
 }
 #d4{
     background-image: url('../images/ram.png');
-    background-size: cover;   
+    background-size: contain;
+    background-repeat: no-repeat;  
 }
 #d5{
     background-image: url('../images/ssd.png');
-    background-size: cover;   
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 #d6{
     background-image: url('../images/hddp.png');
@@ -102,7 +111,8 @@ h1{
 }
 #d8{
     background-image: url('../images/gpuf.png');
-    background-size: cover;   
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .pc{
@@ -111,48 +121,79 @@ h1{
 }
 
 .compopc{
+    display:none;
     position:absolute;
-    width:10em;
-    height:10em;
     border-radius: 2em;
     border: .2em dashed rgba(255, 255, 255, 0.699);
 }
 
-#carte-mere{
-    bottom: 52vh;
-    margin-left: 25vw;
+.compopcdev{
+    display:block;
 }
 
+#carte-mere{
+    width:17%;
+    height:38vh;
+    display:block;
+    bottom: 38vh;
+    margin-left:20vw;
+}
+
+
+
 #cpu{
-    bottom:55vh;
-    margin-left:30vw;
+    width:3em;
+    height:3em;
+    bottom:60vh;
+    margin-left:26.6vw;
+    border-radius: 1.5em;
+    z-index:8;
 }
 #cooler{
-    bottom:55vh;
-    margin-left:30vw;  
+    width:4.2em;
+    height:4.2em;
+    bottom:58.8vh;
+    margin-left:25.9vw; 
+    z-index:7;
 }
 
 #ram{
-    bottom:55vh;
-    margin-left:35vw;  
+    width:2em;
+    height:10em;
+    bottom:52.5vh;
+    margin-left:31.5vw;  
 }
 
 #ssd{
-    bottom:45vh;
-    margin-left:25vw; 
+    height:2vh;
+    width:7em;
+    bottom:53.7vh;
+    margin-left:23vw; 
 }
 
 #hdd{
+    width:8.8em;
+    height:7.5em;
     bottom:21vh;
-    margin-left:43vw;
+    margin-left:40vw;
 }
 
 #alim{
+    width:10em;
+    height:6.5em;
     bottom: 17vh;
-    margin-left:15vw;
+    margin-left:17vw;
+}
+
+#gpu{
+    height:7vh;
+    width:20%;
+    bottom:45vh;
+    margin-left:17%;
 }
 
 .survol{
+    background: #f4f4f450;
     border: .2em dashed rgba(255, 255, 255, 0.884);
 }
 
@@ -272,13 +313,3 @@ div + a,a+a{
 
 
 
-.tenu {
-    border: solid 5px #ccc;
-}
-
-
-
-.hovered {
-    background: #f4f4f4;
-    border-style: dashed;
-}
