--- a/styles/stylep5.css
+++ b/styles/stylep5.css
@@ -96,20 +96,22 @@ h1{
 }
 
 .images{
-    width:15em;
-    height: 15em;
+    position:relative;
     cursor: pointer;
+    width:100%;
+    height:100%;
 }
+
 .composants{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
-.max{
-    width:100%;
-    height:100%;
+.mini{
+    display:none;
 }
+
 #d1{
     background-image: url('../images/mb.png');
     background-size: contain;
@@ -129,7 +131,7 @@ h1{
     position: relative;
     width:20%;
     height:auto;
-    z-index:8;
+    z-index:7;
 }
 
 #d3{
@@ -140,7 +142,7 @@ h1{
     position: relative;
     width:20%;
     height:auto;
-    z-index:7;
+    z-index:8;
 }
 
 #d4{
@@ -148,6 +150,12 @@ h1{
     background-size: contain;
     background-repeat: no-repeat;  
 }
+.ram1{
+    position:relative;
+    height:9vh;
+    width:auto;
+}
+
 #d5{
     background-image: url('../images/ssd.png');
     background-size: contain;
@@ -187,8 +195,8 @@ h1{
     width:17%;
     height:38vh;
     display:block;
-    bottom: 38vh;
-    margin-left:20vw;
+    bottom: 40vh;
+    margin-left:19vw;
 }
 
 #cpu{
@@ -200,10 +208,10 @@ h1{
     z-index:8;
 }
 #cooler{
-    width:4.2em;
-    height:4.2em;
-    bottom:58.8vh;
-    margin-left:26.2vw; 
+    width:6em;
+    height:6em;
+    bottom:58vh;
+    margin-left:25vw; 
     z-index:7;
 }
 
@@ -253,7 +261,10 @@ h1{
     margin-top:3vh;
 }
 
-
+.compo{
+    width:15em;
+    height: 15em;
+}
 /*largeur de la barre de défilement*/
 ::-webkit-scrollbar {
     width: 15px;
