--- a/styles/stylep5.css
+++ b/styles/stylep5.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100;300&display=swap');
 
+*{
+    user-select:none;
+}
+
 body{
     height: 100vh;
     width:100vw;
@@ -99,7 +103,7 @@ h1{
     position:relative;
     cursor: pointer;
     width:100%;
-    height:100%;
+    height:90%;
 }
 
 .composants{
@@ -270,7 +274,8 @@ h1{
 .compo{
     position: relative;
     width:15em;
-    height: 15em;
+    height: 17em;
+    overflow:hidden;
 }
 /*largeur de la barre de défilement*/
 ::-webkit-scrollbar {
@@ -297,8 +302,10 @@ h1{
 .interrogation_txt{
     display:none;
     color: rgb(53, 53, 53);
-    font-family: "Roboto", sans-serif;
+    font-family: "open-sans", sans-serif;
+    font-weight: 300;
     padding: 0 10%;
+    margin-bottom:100vh;
 }
 
 #busd{
