--- a/styles/stylep5.css
+++ b/styles/stylep5.css
@@ -121,10 +121,7 @@ h1{
     background-size: contain;
     background-repeat: no-repeat;
 }
-.cm1{
-    position:absolute;
-    bottom:15vh;
-}
+
 
 #d2{
     background-image: url('../images/cpu.png');
@@ -166,20 +163,24 @@ h1{
 }
 
 #carte-mere{
-    width:17%;
-    height:38vh;
+    width:23.5em;
+    height:23.5em;
     display:block;
-    bottom: 40vh;
-    margin-left:19vw;
+    bottom: 24.5em;
+    margin-left:22em;
+}
+.cm1{
+    position:absolute;
+    bottom:15em;
 }
 .cooler1,.ram1,.ssd1,.alim1,.hdd1,.gpu1{
     position:absolute;
 }
 #cpu{
-    width:3em;
-    height:3em;
-    bottom:61vh;
-    margin-left:26.6vw;
+    width:3.2em;
+    height:3.2em;
+    bottom:38.2em;
+    margin-left:31.5em;
     border-radius: 1.5em;
     z-index:8;
 }
@@ -189,10 +190,10 @@ h1{
 }
 
 #cooler{
-    width:6em;
-    height:6em;
-    bottom:58vh;
-    margin-left:25vw; 
+    width:7em;
+    height:7em;
+    bottom:36.7em;
+    margin-left:29.5em; 
     z-index:7;
 }
 .cooler1{
@@ -200,60 +201,64 @@ h1{
 }
 
 #ram{
-    width:2em;
-    height:8.7em;
-    bottom:54.5vh;
-    margin-left:32vw;  
+    width:3em;
+    height:12em;
+    bottom:34em;
+    margin-left:37.5em;  
 }
 .ram1{
     z-index:9;
 }
 
 #ssd{
-    height:2.2vh;
+    height:2em;
     width:7em;
-    bottom:53.2vh;
-    margin-left:23vw; 
+    bottom:33em;
+    margin-left:28em; 
 }
 .ssd1{
-    height:3vh!important ;
+    height:2.5em!important ;
 }
 
 #hdd{
-    width:8.8em;
-    height:7.5em;
-    bottom:21vh;
-    margin-left:40vw;
+    width:11em;
+    height:9em;
+    bottom:13.5em;
+    margin-left:49em;
 }
 
 #alim{
-    width:10em;
-    height:6.5em;
-    bottom: 17vh;
-    margin-left:17vw;
+    width:12em;
+    height:8em;
+    bottom: 11em;
+    margin-left:21em;
 }
 .alim1{
-    bottom:15.6vh!important;
-    margin-left:18vw!important;
+    bottom:15.6em!important;
+    margin-left:18em!important;
 }
 
 #gpu{
-    height:7vh;
-    width:20%;
-    bottom:45vh;
-    margin-left:17%;
+    height:4em;
+    width:20em;
+    bottom:28.5em;
+    margin-left:22em;
 }
 
 #case{
-    position:relative;
-    height:80%;
-    width:auto;
-    top:10%;
+    position:absolute;
+    height:69em;
+    width:69em;
+    top:5.9em;
+    margin-left:7.8em;
+    background-image: url("../images/boitier.png");
+    background-size: contain;
+    background-repeat: no-repeat;   
+    
 }
 
 .pc{
     background: linear-gradient(109.6deg, rgba(156,252,248,1), rgba(110,123,251,1));
-    text-align:center;
 }
 
 .compopc{
