--- a/styles/stylep2.css
+++ b/styles/stylep2.css
@@ -23,6 +23,27 @@ html{
     background:linear-gradient(60deg, #ff5fc8 -50%, #fcbf78); /* la valeur -50% permet de faire reculer le point à partir duquel la partie rose commence <=> permet de faire un dégradé moins compacte. voir aussi: https://developer.mozilla.org/fr/docs/Web/CSS/gradient/linear-gradient()*/
     border-radius: 5em;
 }
+.moi_txt{
+    padding:2em;
+    font-size:2em;
+    color:#fff;
+}
+
+.desc{
+    position:absolute;
+    margin:7em 0 0 50em;
+}
+
+#moi{
+    background-image: url("../images/moi.png");
+    background-size: contain;
+    width:7em;
+    height:7em;
+    border-radius: 3.5em;
+    position:absolute;
+    margin-top:5em;
+    margin-left:27em;
+}
 
 .langues{
     position:absolute;
@@ -45,8 +66,6 @@ html{
     background:rgba(255, 255, 255, 0.218);
     border-radius:1.5em;
 }
-
-
 
 #b2{
     width:100%;
