--- a/styles/stylep4.css
+++ b/styles/stylep4.css
@@ -1,35 +1,39 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900&display=swap');
 *{
-    margin: 0;
     padding: 0;
-    border: 0;
-    font-weight: 100;
-    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    user-select:none;
 }
-.parallax{
+
+body{
+    width:100%;
+    height:100%;
+}
+
+.img1{
     background: url('https://images.pexels.com/photos/192136/pexels-photo-192136.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') repeat fixed 100%;
-    color: aliceblue;
+    background-size: cover;
+    height:30em;
 }
-.parallax-1{
+.img2{
     background: url('https://images.pexels.com/photos/3369569/pexels-photo-3369569.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') repeat fixed 100%;
     background-size: cover;
-    color: aliceblue;
+    height:10em;
 }
-.parallax-2{
+.img3{
     background: url('https://images.pexels.com/photos/417173/pexels-photo-417173.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') repeat fixed 100%;
     background-size: cover;
-    color: aliceblue;
+    height:10em;
 }
-.parallax-inner{
-    padding-top: 20%;
-    padding-bottom: 20%;
+.parallax-interieur{
+    padding-top: 20% 0;
+    text-align:center;
 }
-h3{
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
+
 h1{
-    font-size: 160px;
-    text-align: center;
+    font-size:3em;
+}
+.texte{
+    font-size:2em;
 }
